--- a/assets/css/style6.css
+++ b/assets/css/style6.css
@@ -862,15 +862,15 @@ body {
 }
 
 .item__content--small {
-    min-height: 100px;
+    height: 100px;
 }
 
 .item__content--medium {
-    min-height: 175px;
+    height: 175px;
 }
 
 .item__content--large {
-    min-height: 280px;
+    height: 280px;
 
 }
 
