--- a/assets/css/style6.css
+++ b/assets/css/style6.css
@@ -475,14 +475,14 @@ body {
 
 .sec4__cont3 .imgWrap {
     top: 10%;
-    right: 50%;
+    right: 40%;
     transform: translateX(50%);
-    width: 30%;
-    height: 60%;
+    width: 40%;
+    height: 65%;
 }
 
 .sec4__cont3 .imgWrap .img {
-    background-image: url(../img/img2.png);
+    background-image: url(../img/like6.png);
 }
 
 .sec4__cont4 .imgWrap {
@@ -693,7 +693,6 @@ body {
     font-size: 16px;
     text-align: left;
     color: #999;
-    white-space: nowrap;
 }
 
 #section5 .sec__msg .desc2 {
@@ -766,77 +765,98 @@ body {
     background-image: url(../img/i5.jpg);
 }
 
-.masonry .item:last-child .item__content:hover {
-    background: #3F3B3B;
+
+.masonry .item.last .item__content:hover {
+    background: #ffffff27;
 }
 
 .item .item__content {
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    min-height: 100px;
-    font-size: 40px;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
     box-sizing: border-box;
     color: #fff;
-    background-color: #3F3B3B;
-    background-repeat: no-repeat;
+    background-color: #ffffff27;
     background-position: center;
     background-size: cover;
-    transition: opacity 0.3s;
-}
-
-.item__content .blur {
+    background-repeat: no-repeat;
+    backdrop-filter: blur(5px);
     padding: 20px;
-    backdrop-filter: blur(4px);
+    z-index: 10;
 }
 
-.cmt__input {
+.item__content::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background: #0000007e;
+    backdrop-filter: blur(2px);
+    z-index: -1;
+}
+
+.item.last .item__content .cmt_h {
+    font-size: 16px;
+    font-family: "IropkeBatang";
+    color: #ffffff5e;
+    margin-bottom: 10px;
     font-size: 14px;
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
 }
 
-.cmt__input>div {
-    text-align: center;
+.item.last .item__content input {
+    border: 0;
+    margin-bottom: 5px;
+    background-color: transparent;
+    border: 1px solid #ffffff50;
+    padding: 3px 10px;
+    font-family: "IropkeBatang";
+    font-size: 14px;
+    width: 100%;
 }
 
-.cmt__input>input {
-    border: none;
-    color: #555;
-    outline: none;
-    margin-top: 5px;
-    padding: 5px;
+.item.last {
+    padding: 10px;
 }
 
-.cmt__input>input::placeholder {
-    font-size: 13px;
-    font-family: var(--fontKor);
-}
-
-.cmt__input>button {
-    margin-top: 5px;
+.item.last .item__content button {
+    width: 100%;
+    display: block;
+    font-family: "IropkeBatang";
+    background: transparent;
     padding: 3px;
+    border: 0;
+    color: #fff;
     background-color: #555;
-    color: var(--white);
+    font-size: 14px;
+    cursor: pointer;
 }
 
-.cmt__input>button:hover {
+.item.last .item__content button:hover {
     background-color: var(--black);
 }
 
 .item__content .text {
+    word-break: keep-all;
     font-size: 16px;
-    width: 80%;
-    text-align: left;
-    padding-bottom: 10px;
+    line-height: 1.7;
+    color: #f1f1f1;
+    position: relative;
+    z-index: 100;
     font-family: var(--fontKor);
 }
 
 .item__content .date {
-    font-size: 14px;
-    text-align: right;
+    word-break: keep-all;
+    font-size: 16px;
+    line-height: 1.7;
+    color: #f1f1f1;
+    position: relative;
+    z-index: 100;
     font-family: var(--fontKor);
 }
 
@@ -853,16 +873,25 @@ body {
 
 .item__content:hover {
     background: #DAA39C;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 
-.item__content:hover .text,
-.item__content:hover .date {
-    color: #fff;
-}
-
+/* .item__content:before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 13px;
+    width: 2em;
+    height: 2em;
+    line-height: 2em;
+    text-align: center;
+    font-weight: bold;
+} */
 .item__content--small {
-    height: 100px;
+    min-height: 100px;
 }
 
 .item__content--medium {
@@ -884,6 +913,9 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     /* color: var(--white); */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 #contact .contact {
@@ -901,20 +933,25 @@ body {
 
 #contact .text__info h5,
 #contact .text__info p:first-child {
-    font-weight: 600;
+    font-weight: bold;
 }
 
 #contact .text__info h5,
 #contact .text__info p {
     padding: 0 100px;
     font-family: var(--fontNGL);
-    font-size: 1.4rem;
+    font-size: 1.2rem;
 
+}
+
+#contact .text__info .kor {
+    font-family: var(--fontKor);
+    font-size: 1.2rem;
 }
 
 #contact .text__info li a {
     padding: 0 100px;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     font-family: var(--fontNGL);
 }
 
