--- a/assets/css/style6.css
+++ b/assets/css/style6.css
@@ -98,6 +98,18 @@ body {
     opacity: 0;
 }
 
+.progress {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    padding: 10px;
+}
+
+.progress .percent {
+    font-size: 20px;
+    font-family: var(--fontNGE);
+}
+
 .black__btn {
     display: flex;
     align-items: center;
@@ -786,6 +798,7 @@ body {
     backdrop-filter: blur(5px);
     padding: 20px;
     z-index: 10;
+    transition: all 0.3s;
 }
 
 .item__content::after {
@@ -834,6 +847,8 @@ body {
     background-color: #555;
     font-size: 14px;
     cursor: pointer;
+    transition: all 0.3s;
+
 }
 
 .item.last .item__content button:hover {
