--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -17,6 +17,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Beastly&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Splash&display=swap');
 
+@import url('https://websfont.github.io/gmarket/gmarket.css');
 
 @font-face {
     font-family: 'SFProText';
